manifests/xww/helm-dashboard.yml
apiVersion: v1
kind: Namespace
metadata:
  name: xww
