manifests/xww/ollama.yml
apiVersion: v1
kind: Namespace
metadata:
  name: xww
